--- a/_notebooks/2022-12-1-LessonDevProcedures2.ipynb
+++ b/_notebooks/2022-12-1-LessonDevProcedures2.ipynb
@@ -86,6 +86,14 @@
     "\n",
     "- ![]({{site.baseurl}}/images/update.png \"https://github.com/fastai/fastpages\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Why are Procedures Important \n",
+    "- Procedures are significant in a program as they can be manipulated to complete tasks and function as you saw with the previous problem. "
+   ]
   }
  ],
  "metadata": {
