--- a/_notebooks/2022-12-06-Calling-procesurespart2.ipynb
+++ b/_notebooks/2022-12-06-Calling-procesurespart2.ipynb
@@ -22,16 +22,22 @@
     "PROCEDURE applyDiscount (cost, cpercentDiscounted)\n",
     "{\n",
     "    temp <-- 100 - percentDiscounted\n",
+    "\n",
     "    temp <-- temp / 100\n",
+    "\n",
     "    cost <-- cost x temp\n",
+    "\n",
     "    Print(cost)\n",
     "}\n",
     "\n",
     "PROCEDURE applytax (cost, cpercentDiscounted)\n",
     "{\n",
     "    temp <-- 100 + percentTaxed\n",
+    "\n",
     "    temp <-- temp / 100\n",
+    "\n",
     "    cost <-- cost x temp\n",
+    "    \n",
     "    Print(cost)\n",
     "}\n",
     "\n"
@@ -85,7 +91,7 @@
     "x <-- x+2\n",
     "y <-- y-1\n",
     "\n",
-    "drawSqaure(x,y,s)"
+    "drawSqaure(x,y,s)\n"
    ]
   }
  ],
