--- a/_notebooks/2022-12-06-3.12lesson.ipynb
+++ b/_notebooks/2022-12-06-3.12lesson.ipynb
@@ -53,7 +53,7 @@
     "Robot = Triangle\n",
     "Black square = Wall\n",
     "White square = Freespace\n",
-    "(add image here)\n",
+    "![]({{site.baseurl}}/images/Robot.png \"https://github.com/fastai/fastpages\")\n",
     "\n",
     "This code uses the procedure detourRight().\n",
     "\n",
