--- a/_notebooks/2022-12-06-3.12lesson.ipynb
+++ b/_notebooks/2022-12-06-3.12lesson.ipynb
@@ -22,13 +22,13 @@
     "\n",
     "- A procedure is a named group of programming instructions that may have parameters and return values.\n",
     "    - Procedures can be reffered to as method or function depending on the programing language.\n",
-    "    - - A procedrure call interrupts an execution of statements and makes the program execute the statements in the procedure. \n",
+    "    - A procedrure call interrupts an execution of statements and makes the program execute the statements in the procedure. \n",
     "- Parameters are input values of a procedure. \n",
     "- Argurments specifcy the values of the parameters when a procedure is called.\n",
     "- If you have a set of statements and inside there is a procedure then when it reaches that procedure it will excute that procedure and then go back to the rest of the statments.\n",
     "- If you see a return statement you automatically end the procedure even if there is more statements\n",
     "\n",
-    "\n",
+    "------------------------------------------------------------------------------------------------\n",
     "\n",
     "# Examples of procedures\n",
     "### Ex 1: A procedure call that does something but does not return a vallue (call a value back).\n",
@@ -44,9 +44,9 @@
     "}\n",
     "\n",
     "Block:\n",
-    "(Add picture here)\n",
+    "![]({{site.baseurl}}/images/block.png \"https://github.com/fastai/fastpages\")\n",
     "\n",
-    "(add line)\n",
+    "---------------------------------------------------------------------------------------------------------\n",
     "\n",
     "### Ex 2: This problem has a robot in a grid of squares. \n",
     "Key:\n",
@@ -73,12 +73,17 @@
     "- MOVE_FORWARD()\n",
     "- ROTATE_RIGHT\n",
     "- }\n",
-    "                    \n",
     "\n",
+    "<details closed>                  \n",
+    "<summary>answer</summary>\n",
+    "![]({{site.baseurl}}/images/Robot2.png \"https://github.com/fastai/fastpages\")\n",
+    "</details>\n",
     "\n",
-    "\n",
+    "-----------------------------------------------------------------------------------------\n",
     "# Homework\n",
-    "### Procedures in procedures\n",
+    "\n",
+    "-------------------------------------------------------------------------------------------\n",
+    "### Problem 1: Procedures in procedures\n",
     "Code below uses the procedure summarize (number A, number B) which uses the procedure min (num 1, num 2)\n",
     "\n",
     "- (-8 = num1)\n",
@@ -86,21 +91,114 @@
     "\n",
     "- summarize (-8,-12)\n",
     "\n",
-    "-IF (num1 < num2)\n",
-    "- {\n",
-    "- RETURN (num1)\n",
-    "- }\n",
-    "- RETURN (num2)\n",
-    "- }\n",
+    " IF (num1 < num2)\n",
     "\n",
-    "- PROCEDURE summarize (numberA, numberB)\n",
-    "- {\n",
-    "- minimum<-min(numberA, numberB)\n",
-    "- DISPLAY (\"The minimum number is\")\n",
-    "- DISPLAY (minimum)\n",
-    "- }\n",
-    "- PROCEDURE min (num1,num2)\n",
-    "- {"
+    " {\n",
+    "\n",
+    " RETURN (num1)\n",
+    "\n",
+    " }\n",
+    "\n",
+    "RETURN (num2)\n",
+    "\n",
+    "}\n",
+    "\n",
+    "PROCEDURE summarize (numberA, numberB)\n",
+    "\n",
+    "{\n",
+    "\n",
+    "minimum<-min(numberA, numberB)\n",
+    "\n",
+    "DISPLAY (\"The minimum number is\")\n",
+    "\n",
+    "PROCEDURE min (num1,num2)\n",
+    "\n",
+    "{\n",
+    "\n",
+    "--------------------------------------------------------------------------------------------------------------------\n",
+    "### Problem 2: This problem involves parameters\n",
+    "Qais is writing code to calculate formulas from his math class. He's currently working on a procedure to calculate average speed, based on this formula:\n",
+    "\n",
+    "Average speed= \n",
+    "\n",
+    "Total Time/Total Distance\n",
+    "​\n",
+    "- Highlight which of these is the best procedure for calculating and displaying average speed.\n",
+    "    - PROCEDURE calcAvgSpeed (distance, time) {\n",
+    "    DISPLAY (distance/time)\n",
+    "}\n",
+    "    - PROCEDURE calcAvgSpeed (distance) {\n",
+    "    DISPLAY (distance/time)\n",
+    "}\n",
+    "    - PROCEDURE calcAvgSpeed (distance, time) {\n",
+    "    DISPLAY (time/distance)\n",
+    "}\n",
+    "\n",
+    "---------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "### Problem 3: Procedures with return values\n",
+    "James Hunter is looking through his classmate's program and sees a procedure called heightenEmotions:\n",
+    "PROCEDURE heightenEmotions(myEmotion) \n",
+    "\n",
+    "{\n",
+    "moreEnergy ← CONCAT(myEmotion, \"!!!\")\n",
+    "\n",
+    "moreVolume ← UPPER(moreEnergy)\n",
+    "\n",
+    "RETURN moreVolume\n",
+    "}\n",
+    "\n",
+    "That procedure manipulates strings using two built-in procedures, CONCAT for concatenating two strings together, and UPPER for converting a string to uppercase.\n",
+    "\n",
+    "James Hunter then sees this line of code:\n",
+    "\n",
+    "heightenEmotions(\"im mad\")\n",
+    "\n",
+    "After that line of code runs, will nothing be displayed?\n",
+    "\n",
+    "True\n",
+    "\n",
+    "False\n",
+    "\n",
+    "---------------------------------------------------------------------------------------------\n",
+    "\n",
+    "### Problem 4: Procedures with return values\n",
+    "Bubz is writing a program to calculate the carbon footprint of his activities.\n",
+    "The procedure calcFlightFootprint calculates the pounds of carbon dioxide produced per passenger in a flight that covers a given number of miles and seats a given number of passengers.\n",
+    "\n",
+    "PROCEDURE calcFlightFootprint(numMiles, numPassengers)\n",
+    "{\n",
+    "   CO2_PER_MILE ← 53.29\n",
+    "\n",
+    "   carbonPerFlight ← numMiles * CO2_PER_MILE\n",
+    "\n",
+    "   carbonPerPassenger  ← carbonPerFlight / numPassengers\n",
+    "\n",
+    "   RETURN carbonPerPassenger\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Bubz wants to use that procedure to calculate the total footprint for his two upcoming flights:\n",
+    "LA to NY: 2,451 miles and 118 passengers\n",
+    "NY to London: 3,442 miles and 252 passengers\n",
+    "\n",
+    "Which of these code snippets successfully calculates and stores her total footprint?\n",
+    "Highlight 2 answers.\n",
+    "\n",
+    "1. \n",
+    "totalFootprint ← calcFlightFootprint(2451, 118) + calcFlightFootprint(3442, 252)\n",
+    "\n",
+    "2. \n",
+    "totalFootprint ← calcFlightFootprint(2451, 118 + 3442, 252)\n",
+    "\n",
+    "3. \n",
+    "\n",
+    "totalFootprint ← calcFlightFootprint((2451, 118) + (3442, 252))\n",
+    "\n",
+    "4.\n",
+    "laNyCarbon ← calcFlightFootprint(2451, 118)\n",
+    "nyLondonCarbon ← calcFlightFootprint(3442, 252)\n",
+    "totalFootprint ← laNyCarbon + nyLondonCarbon\n"
    ]
   },
   {
