--- a/_notebooks/2022-11-29-3.13-developing-procedures-vid1.ipynb
+++ b/_notebooks/2022-11-29-3.13-developing-procedures-vid1.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "## 1. Write a procedure that will rotate the robot below 180 degrees.\n",
     "\n",
-    "![](https://lh3.googleusercontent.com/cgxcEriXc5yvuhDGXJozspMnRWUGKQqZQHDPTS1FKiHYD5DNsOq5zGILhP8IlHkR4w7y7COGTutLtuJvl1x-Y-AN_PXuz3_7QQovRWynnKuEcnlnuG_TgyZ7MKDYWMVykDXTRGOp7jJVVlURDbXN23GKOTS5PPuMSB69mahwgx_o85h1fKlPBad23uX1ML0PQsG1fSz8PtXRWEBYfi8MHzq8XElIcF72Xhr00Ci3GGJBgDm0ftdVrUpEGjqxhT8ltEHlYU9NT59DkzTgwvTU-PPeIJ6pYTJGbJKNkVti4GJRqRGsNH5Lv964yWYJgTGHI4iPSWbjwXUtClN-SvLr2V0fZUn_KtdglGfre7CWtgMRwl5Wgk52FDmZcsVFwaI2KUVub48UtyYTJAgaBgd0mpmL-t-Sfj1utVJZfOX9PfMPVCKxeNQNfnM3a0VBzw65xIR5dvwZcHdc_dN1XrLH2XZM4rI9FPQhhd3Mdt1N-cRp8mem95KwOLDeR5y2rQFsueEQOktMLjGSIWzs6BGMbKjQTe0YiiOx4XyMFje00kPbVNtV1Q65PrvpQ7liXUpUI1wXCQJ807mJu-iid6sXZC_fBEl0VOw_2WwHoNlzX7x0r0ZesjaeBW1jNtzvo31NpboNhDCqv-SiLB1wUvF8Y9jfN6FV7Dm1aTTT_4q4QOmvnoVHgmiechdNDB2jkYopgRb5SRffpwCvU5kzHqPcHjERDMl_vmU5Z9I9aa4dkVR5oK8dy1Ak0fhtde1EnKIuwVh4R4TIAS8bwYb4g53Ix_yT9FGZ7OyJiKBOiaE5qtmDP4l4uhWcZi72K_Ux1ZJZHNdmh8WOVZcY8lyIcwhUwerOwaqlgLyBjuCOyVTmzTG-AWvLK8LoDtDd5yJdW784I2CfCHuzHP2lcheQu3ycI2TlAAHzUKmLQ8MqwG0vVhC_=w528-h444-no?authuser=0)\n",
+    "![]({{site.baseurl}}/images/detour.png \"https://github.com/fastai/fastpages\")\n",
     "\n",
     "Tips: give it a descriptive name\n",
     "      use ROTATE_RIGHT() or ROTATE_LEFT() to turn left or right\n",
