--- a/_notebooks/2022-12-06-Calling-procesurespart2.ipynb
+++ b/_notebooks/2022-12-06-Calling-procesurespart2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.12 Calling Procedures Part 2\n",
+    "# Calling Procedures 3.12\n",
     "\n",
     "> Lesson about Calling Procedures.\n",
     "- toc: true \n",
