--- a/_notebooks/2022-12-04-3.12-part2.ipynb
+++ b/_notebooks/2022-12-04-3.12-part2.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calling Procedures 3.12\n",
-    "\n",
+    "# Calling Procedures 3.12 Part 2\n",
     "> Lesson about Calling Procedures.\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -97,18 +96,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.6"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "dcd4837add793386cd67e25a441830de5b4a5ceabdd5dcba5a317ceae751db5e"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
