--- a/_notebooks/2022-12-05-3.13-part2.ipynb
+++ b/_notebooks/2022-12-05-3.13-part2.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Developing Procedures 3.13 Part 2"
+    "# Developing Procedures 3.13 Part 2\n",
+    "> Lesson about developing procedures\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [markdown]"
    ]
   },
   {
