--- a/_notebooks/2022-12-05-3.13-part1.ipynb
+++ b/_notebooks/2022-12-05-3.13-part1.ipynb
@@ -16,9 +16,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Learning Objective\n",
+    "\n",
+    "- Develop procedural abstraction to manage a program by writing procedures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Essential Knowledge\n",
     "- Procedure: is a named group of programming instructions that serves a purpose\n",
-    "- Parametert: are input values of a procedur\n",
+    "- Parameter: are input values of a procedur\n",
     "- There are two types of procedures, one that returns a value or some type of data and on that just executes a block of statements"
    ]
   },
@@ -29,7 +38,7 @@
     "# Creating a Procedure\n",
     "- When you are picking a name for the procedure it must be descriptive\n",
     "- See if you need any parameters for this procedure (what data do you need to accomplish my goal? What king of information am I going to need?)\n",
-    "- 2 of the parameters in the example below could be the quizGrade and currentPoints\n"
+    "- 2 of the parameters in the example below could be the quizGrade and currentPoints (need this data)\n"
    ]
   },
   {
@@ -38,7 +47,9 @@
    "source": [
     "# Example \n",
     "\n",
-    "![]({{site.baseurl}}/images/example.png \"https://github.com/fastai/fastpages\")\n"
+    "- If you retake a quiz and you get a higher grade than your original grade then your quiz grade will update to the recent grade\n",
+    "![]({{site.baseurl}}/images/example.png \"https://github.com/fastai/fastpages\")\n",
+    "- At the end of this you want to return quizGrade"
    ]
   },
   {
