--- a/_notebooks/2022-12-04-3.12-part1.ipynb
+++ b/_notebooks/2022-12-04-3.12-part1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.12 Calling Procedures Lesson\n",
+    "# 3.12 Calling Procedures Part 1\n",
     "> Lesson about calling procedures\n",
     "- toc: true \n",
     "- badges: true\n",
