--- a/_notebooks/2022-12-06-Calling-procesurespart2.ipynb
+++ b/_notebooks/2022-12-06-Calling-procesurespart2.ipynb
@@ -17,6 +17,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Procedures\n",
+    "\n",
+    "Procedures are that a catch-all term for codes used to identify what was done to or given to a patient"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A $80 item recives a 20% discount and a tax is 8%\n",
     "\n",
     "PROCEDURE applyDiscount (cost, cpercentDiscounted)\n",
@@ -76,7 +85,13 @@
     "\n",
     "drawsquare (xPos, yPos, sidelength)\n",
     "\n",
-    "This draws a square starting in the bottom left corner (xPos, yPos) on the grid with the sidelength"
+    "This draws a square starting in the bottom left corner (xPos, yPos) on the grid with the sidelength\n",
+    "\n",
+    "x <-- x + B\n",
+    "\n",
+    "y <-- y + B\n",
+    "\n",
+    "This equation tells how much to move the square left or right, up or down by B. "
    ]
   },
   {
