--- a/_notebooks/2022-12-04-3.12-part1.ipynb
+++ b/_notebooks/2022-12-04-3.12-part1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.12 Calling Procedures Part 1\n",
+    "# 3.12 Calling Procedures Lesson\n",
     "> Lesson about calling procedures\n",
     "- toc: true \n",
     "- badges: true\n",
@@ -44,7 +44,7 @@
     "}\n",
     "\n",
     "Block:\n",
-    "![]({{site.baseurl}}/images/block.png \"https://github.com/fastai/fastpages\")\n",
+    "![](block.png)\n",
     "\n",
     "---------------------------------------------------------------------------------------------------------\n",
     "\n",
@@ -53,7 +53,7 @@
     "Robot = Triangle\n",
     "Black square = Wall\n",
     "White square = Freespace\n",
-    "![]({{site.baseurl}}/images/Robot.png \"https://github.com/fastai/fastpages\")\n",
+    "![](Robot.png)\n",
     "\n",
     "This code uses the procedure detourRight().\n",
     "\n",
@@ -76,7 +76,7 @@
     "\n",
     "<details closed>                  \n",
     "<summary>answer</summary>\n",
-    "![]({{site.baseurl}}/images/Robot2.png \"https://github.com/fastai/fastpages\")\n",
+    "![](Robot2.png)\n",
     "</details>\n",
     "\n",
     "-----------------------------------------------------------------------------------------\n",
@@ -218,18 +218,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.6"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "02dcd04116fff8c86cf53aae07e9cbbb0eecf269f918bf5b4fc9cd3d0ec07c99"
    }
   }
  },
