--- a/_notebooks/2022-12-04-3.12-part2.ipynb
+++ b/_notebooks/2022-12-04-3.12-part2.ipynb
@@ -16,16 +16,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Procedures\n",
+    "## Essential Knowledge \n",
     "\n",
-    "Procedures are that a catch-all term for codes used to identify what was done to or given to a patient"
+    " - Procedures are that a catch-all term for codes used to identify what was done to or given to a patient\n",
+    "\n",
+    "- If you have a set of statements in a procedure the statement will go thought the top of the procedure to the bottom in order."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A $80 item recives a 20% discount and a tax is 8%\n",
+    "## Practice Problem\n",
+    "\n",
+    "Here is a practice problem that involves calling a procedure by haveing an imput and an output. This is a apply discout and apply tax procedure.\n",
+    "\n",
+    "\n",
+    " $80 item recives a 20% discount and a tax is 8%\n",
     "\n",
     "PROCEDURE applyDiscount (cost, cpercentDiscounted)\n",
     "{\n",
@@ -111,18 +118,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.6"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "dcd4837add793386cd67e25a441830de5b4a5ceabdd5dcba5a317ceae751db5e"
    }
   }
  },
