--- a/_notebooks/2022-12-06-3.13-3.14-homework.ipynb
+++ b/_notebooks/2022-12-06-3.13-3.14-homework.ipynb
@@ -11,6 +11,19 @@
     "- comments: true\n",
     "- categories: [markdown]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script src=\"https://utteranc.es/client.js\"\n",
+    "        repo=\"[Tri2GroupFastpage]\"\n",
+    "        issue-term=\"pathname\"\n",
+    "        theme=\"github-light\"\n",
+    "        crossorigin=\"anonymous\"\n",
+    "        async>\n",
+    "</script>"
+   ]
   }
  ],
  "metadata": {
