--- a/_notebooks/2022-12-04-3.12-part1.ipynb
+++ b/_notebooks/2022-12-04-3.12-part1.ipynb
@@ -63,18 +63,18 @@
     "- MOVE_FORWARD()       \n",
     "- ROTATE_RIGHT()         \n",
     "\n",
+    "\n",
     "- PROCEUDRE detourRight()\n",
     "- {\n",
     "- ROTATE_RIGHT()\n",
     "- MOVE_FORWARD()\n",
     "- ROTATE_LEFT()\n",
     "- MOVE_FORWARD()\n",
+    "- MOVE_FORWARD\n",
     "- ROTATE_LEFT()\n",
     "- MOVE_FORWARD()\n",
     "- ROTATE_RIGHT\n",
     "- }\n",
-    "\n",
-    "\n",
     "![](Robot2.png)\n",
     "\n",
     "\n",
