--- a/_notebooks/2022-12-06-3.13-3.14-homework.ipynb
+++ b/_notebooks/2022-12-06-3.13-3.14-homework.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "<script src=\"https://utteranc.es/client.js\"\n",
-    "        repo=\"[Tri2GroupFastpage]\"\n",
+    "        repo=\"[Tri2GroupFastpages]\"\n",
     "        issue-term=\"pathname\"\n",
     "        theme=\"github-light\"\n",
     "        crossorigin=\"anonymous\"\n",
