--- a/_notebooks/2022-12-05-3.13-part1.ipynb
+++ b/_notebooks/2022-12-05-3.13-part1.ipynb
@@ -48,7 +48,7 @@
     "# Example \n",
     "\n",
     "- If you retake a quiz and you get a higher grade than your original grade then your quiz grade will update to the recent grade\n",
-    "![]({{site.baseurl}}/images/example.png \"https://github.com/fastai/fastpages\")\n",
+    "![](example.png)\n",
     "- At the end of this you want to return quizGrade"
    ]
   },
@@ -60,14 +60,14 @@
     "\n",
     "## 1. Write a procedure that will rotate the robot below 180 degrees.\n",
     "\n",
-    "![]({{site.baseurl}}/images/180degrees.png \"https://github.com/fastai/fastpages\")\n",
+    "![](180degrees.png)\n",
     "\n",
     "Tips: give it a descriptive name\n",
     "      use ROTATE_RIGHT() or ROTATE_LEFT() to turn left or right\n",
     "\n",
     "## 2. Write a procedure that will allow the robot to detour around the block by going to the left.\n",
     "\n",
-    "![]({{site.baseurl}}/images/detour.png \"https://github.com/fastai/fastpages\")\n",
+    "![](detour.png)\n",
     "\n",
     "Tips: use the tips in the previous problems\n",
     "      Use MOVE_FOWARD() to more one spot foward\n"
@@ -79,10 +79,10 @@
    "source": [
     "## Answer\n",
     "1. \n",
-    "![]({{site.baseurl}}/images/answer1.png \"https://github.com/fastai/fastpages\")\n",
+    "![](answer1.png)\n",
     "\n",
     "2. \n",
-    "![]({{site.baseurl}}/images/answer2.png \"https://github.com/fastai/fastpages\")\n"
+    "![](answer2.png)\n"
    ]
   }
  ],
