--- a/_notebooks/2022-12-05-3.13-part2.ipynb
+++ b/_notebooks/2022-12-05-3.13-part2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Developing Procedures 3.13 Part 2\n",
+    "# 3.13 Developing Procedures Part 2\n",
     "> Lesson about developing procedures\n",
     "- toc: true \n",
     "- badges: true\n",
