--- a/_notebooks/2022-12-05-3.13-part1.ipynb
+++ b/_notebooks/2022-12-05-3.13-part1.ipynb
@@ -62,14 +62,14 @@
     "\n",
     "![](180degrees.png)\n",
     "\n",
-    "Tips: give it a descriptive name\n",
+    "Tips: give it a descriptive name and\n",
     "      use ROTATE_RIGHT() or ROTATE_LEFT() to turn left or right\n",
     "\n",
     "## 2. Write a procedure that will allow the robot to detour around the block by going to the left.\n",
     "\n",
     "![](detour.png)\n",
     "\n",
-    "Tips: use the tips in the previous problems\n",
+    "Tips: use the tips in the previous problems and\n",
     "      Use MOVE_FOWARD() to more one spot foward\n"
    ]
   },
