--- a/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
+++ b/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.13-3.14 Homework/Hacks\n",
-    "> Your homework for 3.13-3.14 Homework/Hacks\n",
+    "# 3.12-3.13 Homework/Hacks\n",
+    "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [markdown]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.12 Homework/Hacks"
    ]
   },
   {
@@ -23,6 +30,13 @@
     "        crossorigin=\"anonymous\"\n",
     "        async>\n",
     "</script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.13 Homework/Hacks"
    ]
   }
  ],
