--- a/_notebooks/2022-12-05-3.13-part1.ipynb
+++ b/_notebooks/2022-12-05-3.13-part1.ipynb
@@ -48,8 +48,7 @@
     "# Example \n",
     "\n",
     "- If you retake a quiz and you get a higher grade than your original grade then your quiz grade will update to the recent grade\n",
-    "![](example.png)\n",
-    "- At the end of this you want to return quizGrade"
+    "![](example.png)"
    ]
   },
   {
