--- a/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
+++ b/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
@@ -36,7 +36,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.13 Homework/Hacks"
+    "# 3.13 Homework/Hacks\n",
+    "\n",
+    "#1 Create a procedure that is meant to replace  "
    ]
   }
  ],
