--- a/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
+++ b/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
@@ -23,6 +23,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 3.13 Homework/Hacks\n",
+    "\n",
+    "### #1. Create a procedure that is meant to replace the top running backs yards per game in one season if the current running back has more yards per game\n",
+    "\n",
+    "- Necessary Parameters: toprbyardspg(100), currentrbyards(1260), totalGames(12)   \n",
+    "\n",
+    "\n",
+    "<details closed>\n",
+    "    <summary>Click for hint</summary>\n",
+    "        Refer back to 3.13 Developing Procedures Part 1\n",
+    "    </details>\n",
+    "\n",
+    "### #2. Write a procedure that will allow the A+ to get to the 1, while avoiding the black boxes.\n",
+    "Use what you learned about moving robots\n",
+    "\n",
+    "![](2.png)\n",
+    "\n",
+    "<details closed>\n",
+    "    <summary>Click for hint</summary>\n",
+    "        Refer back to 3.13 Developing Procedures Part 1\n",
+    "    </details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<script src=\"https://utteranc.es/client.js\"\n",
     "        repo=\"[Tri2GroupFastpages]\"\n",
     "        issue-term=\"pathname\"\n",
@@ -30,15 +57,6 @@
     "        crossorigin=\"anonymous\"\n",
     "        async>\n",
     "</script>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3.13 Homework/Hacks\n",
-    "\n",
-    "#1 Create a procedure that is meant to replace  "
    ]
   }
  ],
