--- a/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
+++ b/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
@@ -38,7 +38,7 @@
     "### #2. Write a procedure that will allow the A+ to get to the 1, while avoiding the black boxes.\n",
     "Use what you learned about moving robots\n",
     "\n",
-    "![](2.png)\n",
+    "![](hw2.png)\n",
     "\n",
     "<details closed>\n",
     "    <summary>Click for hint</summary>\n",
