commit all of these!

--- a/_notebooks/2022-12-06-3.13-part2.ipynb
+++ b/_notebooks/2022-12-06-3.13-part2.ipynb
@@ -72,6 +72,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,24 +81,20 @@
     "- tempAverage = 87.5\n",
     "- 87.5>74 True }\n",
     "- This will return 87.5\n",
-    "- However Suppose we CANNOT accept decimals how would we do this?"
+    "Assume you will have to right this procedure for online grade system however they want you to create a procedure that will round the grade how will you do this."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Update Function \n",
     "\n",
-    "- ![]({{site.baseurl}}/images/update.png \"https://github.com/fastai/fastpages\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Why are Procedures Important \n",
-    "- Procedures are significant in a program as they can be manipulated to complete tasks and function as you saw with the previous problem. "
+    "\n",
+    " ![]({{site.baseurl}}/images/update.png \"https://github.com/fastai/fastpages\")\n",
+    "\n",
+    " - This allows for the procedure to update to the answer to round it up "
    ]
   }
  ],
@@ -109,7 +106,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.6"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
