--- a/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
+++ b/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
@@ -13,17 +13,42 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.12 Homework/Hacks"
+    "# 3.12 Homework/Hacks part 2\n",
+    "#### Part 2 1 is on the lesson of 3.1.2 part 1 "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.13 Homework/Hacks\n",
+    "\n",
+    "a -- ? b -- ? c -- 9 \n",
+    "PROCEDURE find a ()\n",
+    "{    b <-- 9 * 9    \n",
+    " a <-- b * c     \n",
+    " Print (a) } \n",
+    "What is a?    \n",
+    "cost ⟵ 173 tax - 10% \n",
+    "PROCEDURE applytax (cost, cpercentDiscounted){    temp <-- 100 + percentTaxed     temp <-- temp / 100     cost <-- cost x temp       Print(cost)} \n",
+    "\n",
+    "What is the cost? \n",
+    "\n",
+    "Tempature - 103 Degrees PROCEDURE convet Fahrenheit (tempature)\n",
+    "{    Celsius <-- tempature - 32       Celsius <-- Celsius x 5/9      \n",
+    " Print (Celsius)} "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3.13 Homework/Hacks for Part 1 and Part 2 of the lesson\n",
     "\n",
     "### #1. Create a procedure that is meant to replace the top running backs yards per game in one season if the current running back has more yards per game\n",
     "\n",
@@ -47,6 +72,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Which Is the Correct Way to define the Name of a Procedure?**\n",
+    "- A. PROCEDURE MYLIST\n",
+    "- B. PROCEDURE MyList\n",
+    "- C. procedure mylist\n",
+    "<details closed>\n",
+    "<summary> Click For Hint</summary>\n",
+    "Remember the word procedure should be in all capitals and a part of the declared procedure should be in caps\n",
+    "   </details>\n",
+    "\n",
+    "**Write A Procedure That gets the BeachBall To the Green Square**\n",
+    "\n",
+    "![](beach.png)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,6 +102,20 @@
     "        async>\n",
     "</script>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# You Have Finished All the hacks Just Add a submisson to the comment in our fastpages under homework!\n",
+    "\n",
+    "### CHECKLIST!\n",
+    "- 3.12 Hacks part 1 (on the lesson of 13.2 Part 1 )\n",
+    "- 3.12 Hacks part 2 \n",
+    "- 3.1.3 Hacks Part 1 \n",
+    "- 3.13 Hacks part 2 "
+   ]
   }
  ],
  "metadata": {
@@ -68,7 +126,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.6"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
