--- a/_notebooks/2022-12-06-3.13-part2.ipynb
+++ b/_notebooks/2022-12-06-3.13-part2.ipynb
@@ -96,6 +96,16 @@
     "\n",
     " - This allows for the procedure to update to the answer to round it up "
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- # How get we get santa to the christmas tree using a procedure \n",
+    "\n",
+    "![](beach.png)"
+   ]
   }
  ],
  "metadata": {
