--- a/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
+++ b/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
@@ -87,8 +87,14 @@
     "\n",
     "**Write A Procedure That gets the BeachBall To the Green Square**\n",
     "\n",
-    "![](beach.png)"
+    "![](zig.png)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
