--- a/_notebooks/2022-12-06-3.13-part2.ipynb
+++ b/_notebooks/2022-12-06-3.13-part2.ipynb
@@ -104,7 +104,7 @@
    "source": [
     "- # How get we get santa to the christmas tree using a procedure \n",
     "\n",
-    "![](beach.png)"
+    "![](zig.png)"
    ]
   }
  ],
