adding to lesson

--- a/_notebooks/2022-12-06-3.13-part2.ipynb
+++ b/_notebooks/2022-12-06-3.13-part2.ipynb
@@ -106,6 +106,29 @@
     "\n",
     "![](zig.png)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hint\n",
+    "- PROCEDURE moveSanta{\n",
+    "    - move_left()\n",
+    "   - move_forward()\n",
+    "    - move_forward()\n",
+    "    - move_right()\n",
+    "    - move_right()\n",
+    "   -  move_forward()\n",
+    "    - move_forward()\n",
+    "    - move_left()\n",
+    "    - move_left()\n",
+    "    - move_forward()\n",
+    "    - move_forward()\n",
+    "   - move_right()\n",
+    "- }\n",
+    "- **Is this the most effective way to make a zig zag through the blocks?**"
+   ]
   }
  ],
  "metadata": {
