--- a/_notebooks/2022-12-06-3.13-part2.ipynb
+++ b/_notebooks/2022-12-06-3.13-part2.ipynb
@@ -24,6 +24,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vocabulary\n",
+    "- Modularity - the practice of breaking a complex program into smaller, independent parts or modules that can be used and reused in different parts of the program\n",
+    "- Logic- the sequence of steps and operations that a computer follows to execute a program, including the specific instructions and decision-making processes built into the code"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
