--- a/_notebooks/2022-12-06-3.13-part2.ipynb
+++ b/_notebooks/2022-12-06-3.13-part2.ipynb
@@ -29,8 +29,7 @@
    "metadata": {},
    "source": [
     "# Vocabulary\n",
-    "- Modularity - the practice of breaking a complex program into smaller, independent parts or modules that can be used and reused in different parts of the program\n",
-    "- Logic- the sequence of steps and operations that a computer follows to execute a program, including the specific instructions and decision-making processes built into the code"
+    "- Modularity - the practice of breaking a complex program into smaller, independent parts or modules that can be used and reused in different parts of the program"
    ]
   },
   {
