--- a/_notebooks/2022-12-06-3.13-part2.ipynb
+++ b/_notebooks/2022-12-06-3.13-part2.ipynb
@@ -138,6 +138,14 @@
     "- }\n",
     "- **Is this the most effective way to make a zig zag through the blocks?**"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](movement.png)"
+   ]
   }
  ],
  "metadata": {
