--- a/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
+++ b/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
@@ -29,17 +29,41 @@
     "\n",
     "a -- ? b -- ? c -- 9 \n",
     "PROCEDURE find a ()\n",
+    "\n",
     "{    b <-- 9 * 9    \n",
-    " a <-- b * c     \n",
-    " Print (a) } \n",
+    "\n",
+    "    a <-- b * c     \n",
+    "\n",
+    " Print (a)\n",
+    "\n",
+    "} \n",
+    "\n",
     "What is a?    \n",
+    "\n",
     "cost ⟵ 173 tax - 10% \n",
-    "PROCEDURE applytax (cost, cpercentDiscounted){    temp <-- 100 + percentTaxed     temp <-- temp / 100     cost <-- cost x temp       Print(cost)} \n",
+    "\n",
+    "PROCEDURE applytax (cost, cpercentDiscounted)\n",
+    "{\n",
+    "    temp <-- 100 + percentTaxed   \n",
+    "\n",
+    "    temp <-- temp / 100\n",
+    "\n",
+    "    cost <-- cost x temp       \n",
+    "    \n",
+    "    Print(cost)} \n",
     "\n",
     "What is the cost? \n",
     "\n",
-    "Tempature - 103 Degrees PROCEDURE convet Fahrenheit (tempature)\n",
-    "{    Celsius <-- tempature - 32       Celsius <-- Celsius x 5/9      \n",
+    "Tempature - 103 Degrees\n",
+    "\n",
+    "PROCEDURE convet Fahrenheit (tempature)\n",
+    "\n",
+    "{\n",
+    "    \n",
+    "    Celsius <-- tempature - 32  \n",
+    "\n",
+    "    Celsius <-- Celsius x 5/9      \n",
+    "    \n",
     " Print (Celsius)} "
    ]
   },
