--- a/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
+++ b/_notebooks/2022-12-07-3.13-3.14-homework.ipynb
@@ -111,7 +111,7 @@
     "\n",
     "**Write A Procedure That gets the BeachBall To the Green Square**\n",
     "\n",
-    "![](zig.png)"
+    "![](beach.png)"
    ]
   },
   {
@@ -150,18 +150,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.9"
+   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "dcd4837add793386cd67e25a441830de5b4a5ceabdd5dcba5a317ceae751db5e"
    }
   }
  },
