remove qais question

--- a/_notebooks/2022-12-04-3.12-part1.ipynb
+++ b/_notebooks/2022-12-04-3.12-part1.ipynb
@@ -13,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,43 +80,11 @@
     "\n",
     "\n",
     "-----------------------------------------------------------------------------------------\n",
-    "# Homework\n",
+    "## Homework\n",
     "\n",
-    "-------------------------------------------------------------------------------------------\n",
-    "### Problem 1: Procedures in procedures\n",
-    "Code below uses the procedure summarize (number A, number B) which uses the procedure min (num 1, num 2)\n",
-    "\n",
-    "- (-8 = num1)\n",
-    "- (-12 = num2)\n",
-    "\n",
-    "- summarize (-8,-12)\n",
-    "\n",
-    " IF (num1 < num2)\n",
-    "\n",
-    " {\n",
-    "\n",
-    " RETURN (num1)\n",
-    "\n",
-    " }\n",
-    "\n",
-    "RETURN (num2)\n",
-    "\n",
-    "}\n",
-    "\n",
-    "PROCEDURE summarize (numberA, numberB)\n",
-    "\n",
-    "{\n",
-    "\n",
-    "minimum<-min(numberA, numberB)\n",
-    "\n",
-    "DISPLAY (\"The minimum number is\")\n",
-    "\n",
-    "PROCEDURE min (num1,num2)\n",
-    "\n",
-    "{\n",
     "\n",
     "--------------------------------------------------------------------------------------------------------------------\n",
-    "### Problem 2: This problem involves parameters\n",
+    "### Problem 1: This problem involves parameters\n",
     "Qais is writing code to calculate formulas from his math class. He's currently working on a procedure to calculate average speed, based on this formula:\n",
     "\n",
     "Average speed= \n",
@@ -135,7 +104,7 @@
     "\n",
     "---------------------------------------------------------------------------------------------------------\n",
     "\n",
-    "### Problem 3: Procedures with return values\n",
+    "### Problem 2: Procedures with return values\n",
     "James Hunter is looking through his classmate's program and sees a procedure called heightenEmotions:\n",
     "PROCEDURE heightenEmotions(myEmotion) \n",
     "\n",
@@ -161,7 +130,7 @@
     "\n",
     "---------------------------------------------------------------------------------------------\n",
     "\n",
-    "### Problem 4: Procedures with return values\n",
+    "### Problem 3: Procedures with return values\n",
     "Bubz is writing a program to calculate the carbon footprint of his activities.\n",
     "The procedure calcFlightFootprint calculates the pounds of carbon dioxide produced per passenger in a flight that covers a given number of miles and seats a given number of passengers.\n",
     "\n",
