--- a/_notebooks/2023-03-09-AP-unit2-3.ipynb
+++ b/_notebooks/2023-03-09-AP-unit2-3.ipynb
@@ -12,7 +12,7 @@
     "- categories: []\n",
     "- type: ap\n",
     "- week: 25\n",
-    "- permalink: /data"
+    "- permalink: /pandas"
    ]
   },
   {
