--- a/_notebooks/2023-03-09-AP-unit2-3.ipynb
+++ b/_notebooks/2023-03-09-AP-unit2-3.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -251,9 +251,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Name          Color  Age\n",
+      "0    Caleb         Orange   16\n",
+      "2     Theo         Yellow   17\n",
+      "3     Luke           Pink   19\n",
+      "5   Nathan          Black   16\n",
+      "6     Mati          White   17\n",
+      "7   Kahlid       Hot Pink   17\n",
+      "8     Jake     Neon Green   15\n",
+      "9      Ian  Seafoam Green   18\n",
+      "10   Miles           Cyan   17\n",
+      "11    Toby           Blue   16\n"
+     ]
+    }
+   ],
    "source": [
     "#print only values with a specific criteria \n",
     "print(df[df.Age > 10])"
@@ -269,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,9 +559,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Pulse</th>\n",
+       "      <th>Maxpulse</th>\n",
+       "      <th>Calories</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>300</td>\n",
+       "      <td>108</td>\n",
+       "      <td>143</td>\n",
+       "      <td>1500.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>270</td>\n",
+       "      <td>100</td>\n",
+       "      <td>131</td>\n",
+       "      <td>1729.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>210</td>\n",
+       "      <td>137</td>\n",
+       "      <td>184</td>\n",
+       "      <td>1860.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>210</td>\n",
+       "      <td>108</td>\n",
+       "      <td>160</td>\n",
+       "      <td>1376.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>180</td>\n",
+       "      <td>90</td>\n",
+       "      <td>120</td>\n",
+       "      <td>800.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>20</td>\n",
+       "      <td>151</td>\n",
+       "      <td>168</td>\n",
+       "      <td>229.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>20</td>\n",
+       "      <td>141</td>\n",
+       "      <td>162</td>\n",
+       "      <td>222.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>20</td>\n",
+       "      <td>110</td>\n",
+       "      <td>130</td>\n",
+       "      <td>131.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>15</td>\n",
+       "      <td>124</td>\n",
+       "      <td>139</td>\n",
+       "      <td>124.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>15</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>50.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>169 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Duration  Pulse  Maxpulse  Calories\n",
+       "69        300    108       143    1500.2\n",
+       "79        270    100       131    1729.0\n",
+       "109       210    137       184    1860.4\n",
+       "60        210    108       160    1376.0\n",
+       "106       180     90       120     800.3\n",
+       "..        ...    ...       ...       ...\n",
+       "95         20    151       168     229.4\n",
+       "139        20    141       162     222.4\n",
+       "64         20    110       130     131.4\n",
+       "112        15    124       139     124.2\n",
+       "93         15     80       100      50.5\n",
+       "\n",
+       "[169 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.read_csv('city.csv', index_col=0)"
    ]
@@ -626,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -909,14 +1059,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DecisionTreeClassifier Accuracy: 0.7529411764705882\n",
+      "DecisionTreeClassifier Accuracy: 0.7352941176470589\n",
       "LogisticRegression Accuracy: 0.788235294117647\n"
      ]
     },
