--- a/_notebooks/2023-03-09-AP-unit2-3.ipynb
+++ b/_notebooks/2023-03-09-AP-unit2-3.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -336,15 +336,15 @@
      "output_type": "stream",
      "text": [
       "-------------Dict_to_DF------------------\n",
-      "   calories  duration\n",
-      "0       420        50\n",
-      "1       380        40\n",
-      "2       390        45\n",
+      "   age         city\n",
+      "0   41  Mexico City\n",
+      "1   28      Toronto\n",
+      "2   33       Prague\n",
       "----------Dict_to_DF_labels--------------\n",
-      "      calories  duration\n",
-      "day1       420        50\n",
-      "day2       380        40\n",
-      "day3       390        45\n"
+      "      age         city\n",
+      "day1   41  Mexico City\n",
+      "day2   28      Toronto\n",
+      "day3   33       Prague\n"
      ]
     }
    ],
@@ -353,8 +353,8 @@
     "\n",
     "#the data can be stored as a python dictionary\n",
     "dict = {\n",
-    "  \"calories\": [420, 380, 390],\n",
-    "  \"duration\": [50, 40, 45]\n",
+    "  \"age\": [41, 28, 33],\n",
+    "  \"city\": [\"Mexico City\", \"Toronto\", \"Prague\"]\n",
     "}\n",
     "#stores the data in a data frame\n",
     "print(\"-------------Dict_to_DF------------------\")\n",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -386,13 +386,13 @@
      "output_type": "stream",
      "text": [
       "-------Examine Selected Rows---------\n",
-      "      calories  duration\n",
-      "day1       420        50\n",
-      "day3       390        45\n",
+      "      age         city\n",
+      "day1   41  Mexico City\n",
+      "day3   33       Prague\n",
       "--------Examine Single Row-----------\n",
-      "calories    420\n",
-      "duration     50\n",
-      "Name: day1, dtype: int64\n"
+      "age              41\n",
+      "city    Mexico City\n",
+      "Name: day1, dtype: object\n"
      ]
     }
    ],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -426,11 +426,11 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 3 entries, day1 to day3\n",
       "Data columns (total 2 columns):\n",
-      " #   Column    Non-Null Count  Dtype\n",
-      "---  ------    --------------  -----\n",
-      " 0   calories  3 non-null      int64\n",
-      " 1   duration  3 non-null      int64\n",
-      "dtypes: int64(2)\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   age     3 non-null      int64 \n",
+      " 1   city    3 non-null      object\n",
+      "dtypes: int64(1), object(1)\n",
       "memory usage: 180.0+ bytes\n",
       "None\n"
      ]
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -461,29 +461,23 @@
      "output_type": "stream",
      "text": [
       "--Duration Top 10---------\n",
-      "     Duration  Pulse  Maxpulse  Calories\n",
-      "69        300    108       143    1500.2\n",
-      "79        270    100       131    1729.0\n",
-      "109       210    137       184    1860.4\n",
-      "60        210    108       160    1376.0\n",
-      "106       180     90       120     800.3\n",
-      "90        180    101       127     600.1\n",
-      "65        180     90       130     800.4\n",
-      "61        160    110       137    1034.4\n",
-      "62        160    109       135     853.0\n",
-      "67        150    107       130     816.0\n",
+      "   Unnamed: 0    name         city  age  py-score\n",
+      "3         104      Yi     Shanghai   34      80.0\n",
+      "0         101  Xavier  Mexico City   41      88.0\n",
+      "4         105   Robin   Manchester   38      68.0\n",
+      "6         107    Nori        Osaka   37      84.0\n",
+      "2         103    Jana       Prague   33      81.0\n",
+      "1         102     Ann      Toronto   28      79.0\n",
+      "5         106    Amal        Cairo   31      61.0\n",
       "--Duration Bottom 10------\n",
-      "     Duration  Pulse  Maxpulse  Calories\n",
-      "68         20    106       136     110.4\n",
-      "100        20     95       112      77.7\n",
-      "89         20     83       107      50.3\n",
-      "135        20    136       156     189.0\n",
-      "94         20    150       171     127.4\n",
-      "95         20    151       168     229.4\n",
-      "139        20    141       162     222.4\n",
-      "64         20    110       130     131.4\n",
-      "112        15    124       139     124.2\n",
-      "93         15     80       100      50.5\n"
+      "   Unnamed: 0    name         city  age  py-score\n",
+      "3         104      Yi     Shanghai   34      80.0\n",
+      "0         101  Xavier  Mexico City   41      88.0\n",
+      "4         105   Robin   Manchester   38      68.0\n",
+      "6         107    Nori        Osaka   37      84.0\n",
+      "2         103    Jana       Prague   33      81.0\n",
+      "1         102     Ann      Toronto   28      79.0\n",
+      "5         106    Amal        Cairo   31      61.0\n"
      ]
     }
    ],
@@ -491,7 +485,7 @@
     "import pandas as pd\n",
     "\n",
     "#read csv and sort 'Duration' largest to smallest\n",
-    "df = pd.read_csv('files/data.csv').sort_values(by=['Duration'], ascending=False)\n",
+    "df = pd.read_csv('files/city.csv').sort_values(by=['name'], ascending=False)\n",
     "\n",
     "print(\"--Duration Top 10---------\")\n",
     "print(df.head(10))\n",
@@ -513,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
