--- a/_notebooks/2023-03-16-AP-unit2-4b.ipynb
+++ b/_notebooks/2023-03-16-AP-unit2-4b.ipynb
@@ -36,10 +36,10 @@
     "> Uses PRAGMA statement to read schema.\n",
     "\n",
     "Describe Schema, here is resource [Resource](https://www.sqlite.org/index.html)\n",
-    "- What is a database schema?\n",
-    "- What is the purpose of identity Column in SQL database?\n",
-    "- What is the purpose of a primary key in SQL database?\n",
-    "- What are the Data Types in SQL table?"
+    "- What is a database schema? A database Schema is a blue print or a plan tha make up a database. It helps make up the data elements and tables without the user.\n",
+    "- What is the purpose of identity Column in SQL database? The purpose is to provide a identifier to each row of the table\n",
+    "- What is the purpose of a primary key in SQL database? The primary key makes a column or a certain amount of colums the idenitifies each row\n",
+    "- What are the Data Types in SQL table? Booleans, integers, strings, OOP"
    ]
   },
   {
@@ -93,10 +93,10 @@
     "## Reading Users table in Sqlite.db\n",
     "> Uses SQL SELECT statement to read data\n",
     "\n",
-    "- What is a connection object?  After you google it, what do you think it does?\n",
-    "- Same for cursor object?\n",
-    "- Look at conn object and cursor object in VSCode debugger.  What attributes are in the object?\n",
-    "- Is \"results\" an object?  How do you know?"
+    "- What is a connection object?  After you google it, what do you think it does? A connection object is an object that represents a connection to the database and is used to allow the programmer to execute commands\n",
+    "- Same for cursor object? A cursor object allows the programmer to fetch data row by row and perform different operations\n",
+    "- Look at conn object and cursor object in VSCode debugger.  What attributes are in the object? The attributes in the conn object include many different things like varibles, row_factory and total changes\n",
+    "- Is \"results\" an object?  How do you know? Results is an object and you would know because it is set equal to cursor.execute()"
    ]
   },
   {
@@ -146,8 +146,8 @@
    "source": [
     "## Create a new User in table in Sqlite.db\n",
     "> Uses SQL INSERT to add row\n",
-    "-  Compore create() in both SQL lessons.  What is better or worse in the two implementations? \n",
-    "-  Explain purpose of SQL INSERT.   Is this the same as User __init__?"
+    "-  Compore create() in both SQL lessons.  What is better or worse in the two implementations? In the create function it uses the data and takes the user input to create the users. 4.a can be used for simpler things while 4.b is used for more complex things\n",
+    "-  Explain purpose of SQL INSERT.   Is this the same as User __init__? The SQL insert statement is udsed to insert rows and data into the database table "
    ]
   },
   {
@@ -196,9 +196,9 @@
    "source": [
     "## Updating a User in table in Sqlite.db\n",
     "> Uses SQL UPDATE to modify password\n",
-    "- What does the hacked part do?\n",
-    "- Explain try/except, when would except occur?\n",
-    "- What code seems to be repeated in each of these examples to point, why is it repeated?"
+    "- What does the hacked part do? The hacked part checks to make sure the length of the password is atleast 2 charaters long and if it is not 2 charaters the code will assum it was hacked.\n",
+    "- Explain try/except, when would except occur? try/exept is used for errors that could offur when running the code. Except will occur when there is an error that dosen't pass though the try block of code.\n",
+    "- What code seems to be repeated in each of these examples to point, why is it repeated? It is repaerted to check if the information properly matches where it supposed to go and make sure it in the right spots."
    ]
   },
   {
@@ -251,8 +251,8 @@
    "source": [
     "## Delete a User in table in Sqlite.db\n",
     "> Uses a delete function to remove a user based on a user input of the id.\n",
-    "- Is DELETE a dangerous operation?  Why?\n",
-    "- What is the \"f\" and {uid} do?"
+    "- Is DELETE a dangerous operation?  Why? It can be dangerous because you could delet all of your data and information and it can not be recovered.\n",
+    "- What is the \"f\" and {uid} do? f is used to embed expressions inside of string literals. The uid is used to imput the user id that will be used in code"
    ]
   },
   {
@@ -298,8 +298,8 @@
    "source": [
     "# Menu Interface to CRUD operations\n",
     "> CRUD and Schema interactions from one location by running menu. Observe input at the top of VSCode, observe output underneath code cell.\n",
-    "- Why does the menu repeat?\n",
-    "- Could you refactor this menu?  Make it work with a List?"
+    "- Why does the menu repeat? the menu repreats because it is recursive\n",
+    "- Could you refactor this menu?  Make it work with a List? yes you could refactor the menu and make a list with the values"
    ]
   },
   {
