Space and Time Complex

--- a/_notebooks/2023-03-16-AP-unit2-4b.ipynb
+++ b/_notebooks/2023-03-16-AP-unit2-4b.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -101,14 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 'John Mortensen', 'jm1021', 'sha256$3vr6s8bl6FyEsRSZ$fa0104dcef546567e6b5518288d5c46eb268dfacd49a54770702a7888525fdd4', '1959-10-21')\n"
+      "(6, 'Caleb', 'CEN', 'password', '2006-04-14')\n",
+      "(7, 'Eli', '9876', 'hello', '2005-03-21')\n",
+      "(8, 'Harley', 'dog', 'dogssss', '2008-05-10')\n",
+      "(9, 'Charlie', 'dog2', 'dogzzzz', '2023-01-14')\n"
      ]
     }
    ],
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,22 +312,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A new user record CEN has been created\n",
-      "No uid Jm1021 was not found in the table\n",
-      "The row with uid jm1021 was successfully deleted\n",
-      "A new user record 9876 has been created\n",
-      "A new user record dog has been created\n",
-      "A new user record dog2 has been created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Menu, to run other cells from one control point\n",
     "def menu():\n",
@@ -353,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +374,7 @@
     "# Defines rows and headers\n",
     "table = tabulate(rows, headers=[\"ID\", \"Name\", \"User ID\"])\n",
     "\n",
-    "print(table)"
+    "print(table)*"
    ]
   },
   {
