--- a/_posts/2023-04-28-hacks.md
+++ b/_posts/2023-04-28-hacks.md
@@ -20,7 +20,7 @@ title: Zestys
 
 # Binary Logic
 
-![]({{site.baseurl }}/images/Calebscore.png)
+![]({{site.baseurl }}/images/calebscore.png)
 
 # Binary Math
 
